# Quantum-C

./: CMakeLists.txt  README (2).md  main.cpp  quantum_lab.py
build-vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  app.vcxproj  app.vcxproj.filters  cmake_install.cmake  cpp_drives_python.sln
build-vs/app.dir/Release/: app.exe.recipe
build-vs/app.dir/Release/app.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-vs/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build-vs/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.write.1.tlog
build-vs/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build-vs/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
